--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,14 @@
+/* styles/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-family: "DM Sans", sans-serif; /* Set DM Sans font */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,10 +18,22 @@
   }
 }
 
+@layer utilities {
+  .line-clamp-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    max-height: calc(3 * 1.5rem); /* Adjust according to your font size */
+  }
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-family); /* Set the font family here */
+  -webkit-font-smoothing: antialiased; /* For WebKit browsers */
+  -moz-osx-font-smoothing: grayscale; /* For Firefox on macOS */
 }
 
 @layer utilities {
